tests/auto/sql/kernel/qsqlresult/tst_qsqlresult.cpp
@@ -53,6 +53,7 @@ public:
 
 private slots:
     void positionalToNamedBinding();
+    void parseOfBoundValues();
 
 };
 
@@ -66,6 +67,39 @@ void tst_QSqlResult::positionalToNamedBinding()
     TestSqlDriverResult result(&testDriver);
     QString query("INSERT INTO MYTABLE (ID, NAME, BIRTH) VALUES(?, ?, ?)");
     QVERIFY(result.savePrepare(query));
+    QCOMPARE(result.boundValues().count(), 3);
+}
+
+void tst_QSqlResult::parseOfBoundValues()
+{
+    TestSqlDriver testDriver;
+    TestSqlDriverResult result(&testDriver);
+    QVERIFY(result.savePrepare("SELECT :1 AS \":2\""));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT :1 AS ':2'"));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT :1 AS [:2]"));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT :1 AS [:2]]]"));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT :1 AS [:2]]]]]"));
+    QCOMPARE(result.boundValues().count(), 1);
+
+    QVERIFY(result.savePrepare("SELECT ? AS \"?\""));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT ? AS '?'"));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT ? AS [?]"));
+    QCOMPARE(result.boundValues().count(), 1);
+
+    QVERIFY(result.savePrepare("SELECT ? AS \"'?\""));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT ? AS '?\"'"));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT ? AS '?''?'"));
+    QCOMPARE(result.boundValues().count(), 1);
+    QVERIFY(result.savePrepare("SELECT ? AS [\"?']"));
+    QCOMPARE(result.boundValues().count(), 1);
 }
 
 QTEST_MAIN( tst_QSqlResult )
